# mlops-systems-consulting-artifacts

./: Dockerfile  README.md  k8s_deployment.yaml  pyproject.toml
app/: main.py
model/: sample_model.pkl
